src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__BundleInvoiceLevel__c</fullName>
        <description>The invoice level associated with the bundle</description>
        <inlineHelpText>The invoice level associated with the bundle</inlineHelpText>
        <label>Bundle Invoice Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationType__c</fullName>
        <description>The product configuration type</description>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standalone</fullName>
                    <default>true</default>
                    <label>Standalone</label>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Customizable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product must be configured during selection.</description>
        <label>Must Configure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DiscontinuedDate__c</fullName>
        <description>The date when the product is pulled out and rendered unavailable for sale on the store</description>
        <inlineHelpText>The date when the product is pulled out and rendered unavailable for sale on the store</inlineHelpText>
        <label>Discontinued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The product effective date. The product becomes available for selection on this date and time.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveStartDate__c</fullName>
        <description>The start date of the product in a store</description>
        <inlineHelpText>The start date of the product in a store</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExcludeFromSitemap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product is listed for indexing by search engines.</description>
        <inlineHelpText>Indicates whether the product is listed for indexing by search engines.</inlineHelpText>
        <label>Exclude From Sitemap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The product expiration date. The product is unavailable for selection after this date and time.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has attributes.</description>
        <label>Has Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasDefaults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has default rules</description>
        <label>Has Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has options.</description>
        <label>Has Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasSearchAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true the product can be considered as base product for searching related products</description>
        <label>Has Search Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IconId__c</fullName>
        <description>The attachment object ID of the uploaded icon image file.</description>
        <label>Icon Image</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IconSize__c</fullName>
        <description>The actual size of the icon.</description>
        <inlineHelpText>The actual size of the icon.</inlineHelpText>
        <label>Actual Icon Size</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Icon__c</fullName>
        <description>Displays the icon uploaded using the icon button.</description>
        <formula>HYPERLINK( &quot;/apex/Apttus_Config2__IconUploader?productId=&quot;+Id, IF(ISBLANK(Apttus_Config2__IconId__c) , IMAGE(&quot;/resource/Apttus_Config2__Image_UploadIcon&quot;, &quot;Upload Icon&quot;, 50, 50), IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+Apttus_Config2__IconId__c , &quot;Icon&quot;, 50, 50)) , &quot;_top&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Icon for display in application. Click on the icon to add/change the image.</inlineHelpText>
        <label>Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LaunchDate__c</fullName>
        <description>The date when the product is launched for selling.</description>
        <inlineHelpText>The date when the product is launched for selling.</inlineHelpText>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Uom__c</fullName>
        <description>The default unit of measure for the product</description>
        <label>Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Version__c</fullName>
        <defaultValue>1.00</defaultValue>
        <label>Version</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>